[gd_scene load_steps=4 format=3 uid="uid://b8xv0pqw4xqcm"]

[ext_resource type="Script" uid="uid://bkhcoxqnb7qek" path="res://entities/projectiles/PlayerProjectile.gd" id="1_0v8qj"]
[ext_resource type="Texture2D" uid="uid://cvcgdm6xb84gi" path="res://assets/textures/proyectile_player.png" id="2_7h4ys"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1"]
radius = 4.0

[node name="PlayerProjectile" type="RigidBody2D" groups=["player_projectiles"]]
gravity_scale = 0.0
script = ExtResource("1_0v8qj")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_7h4ys")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_1")

[node name="Area2D" type="Area2D" parent="."]

[node name="AreaCollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_1")

[connection signal="body_entered" from="Area2D" to="." method="_on_body_entered"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_entered"]
